Fixed overflow

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -16,13 +16,13 @@
 }
 
 .hero_content h2 {
-    font-size: 2.0rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
 
 }
 
 .hero_content p {
-    font-size: 1.1rem;
+    font-size: 1rem;
     color: var(--heading-color);
     margin-bottom: 50px;
     line-height: 30px;
@@ -82,9 +82,14 @@
 }
 .box_img{
     position:absolute ;
-    top: -12%;
-    left: -13%;
+    top: -10%;
+    left: -20%;
     z-index: 10;
+}
+
+.box_img img {
+  height: 100%;
+  width: 100%;
 }
 
 .box_img{
@@ -94,7 +99,7 @@
     width: 100px;
     position: absolute;
     top: 60%;
-    left: -10%;
+    left: -20%;
     z-index: 10;
     box-shadow: -3px 3px 8px -1px #d3cef2;
     text-align: center;
@@ -129,17 +134,17 @@
 .gym_location {
     position: absolute;
     top: -2%;
-    right: -17%;
+    right: -3%;
     z-index: 10;
     box-shadow: -3px 3px 8px -1px #d3cef2;
     text-align: center;
     background: #fff;
     border-radius: 5px;
-    padding: 1.2rem;
+    padding: 1.1rem;
 }
 .gym_location span{
-    width: 50px;
-    height: 50px;   
+    width: 30px;
+    height: 30px;   
     margin: auto;
     display: flex;
     align-items: center;
@@ -157,8 +162,8 @@
 }
 .dumble_icon{
     position: absolute;
-    top: -2%;
-    left: -5%;
+    top: 2%;
+    left: 6%;
     z-index: 10;
     display: flex;
     align-items: center;
@@ -220,8 +225,8 @@
     }
   
     .box-02 {
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       border: 15px solid #b5a9f3;
     }
   
